--- a/index1.html
+++ b/index1.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content=" FILL ME IN ">
-    <meta name="author" content=" FILL ME IN ">
+    <meta name="description" content="CRP Optimization based on udacity nanodegree">
+    <meta name="author" content=" Suraj Kumar">
     <title>Suraj Kumar: Portfolio Adopted from CRP</title>
 
-    <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-    <link  href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" >
+
 
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/fonts.css" rel="stylesheet" lang="greek">
     <link href="css/print.css" rel="stylesheet" media="print">
 
 
