--- a/index_nofonts.html
+++ b/index_nofonts.html
@@ -79,7 +79,7 @@
 </script>
 
 
-<script async src="http://www.google-analytics.com/analytics.js"></script>
+<script async src="https://www.google-analytics.com/analytics.js"></script>
 <script>
     (function(w,g){w['GoogleAnalyticsObject']=g;
         w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
